[package]
name = "stacky-cli"
version = "0.1.2"
edition = "2024"
description = "Stacky CLI tools"
authors = ["nuskey"]
license = "MIT"
repository = "https://github.com/stacky-language/cli"
readme = "README.md"
keywords = ["stacky", "cli"]
categories = ["command-line-utilities"]
include = ["Cargo.toml", "LICENSE", "README.md", "/src/**"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
rustyline = "14.0"
stacky = "0.1.1"

[[bin]]
name = "stacky"
path = "src/main.rs"
